[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[project]
name = "wiki"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs-material==9.7.4",
    "mkdocs-git-revision-date-localized-plugin==1.5.1",
]

[project.entry-points."pygments.lexers"]
filter_lexer = "scripts.filter_lexer:FilterLexer"
